photo and classes

--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
     rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
-    <header>
+<body class="background-white">
+    <header class="background-blue">
         <nav>
-
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">My projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
+        <div class="widgets">
+            <div class="weather"></div>
+        </div>
         <h1>Koleś Git</h1>
         <h2>portfolio</h2>
+        <img src="img/dude.jpg" class="profile-photo" alt="Profile photo">
+
     </main>
 
     <footer>
