--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
         <h2>portfolio</h2>
         <img src="img/dude.jpg" class="profile-photo" alt="Profile photo">
 
+        <button class="toggle-background">Change background</button>
+        <section id="description">
+            <div>
+                <h3>Bio</h3>
+                <p>Urodzony na Ziemi - Układ gwiezdny: układ słoneczny - galaktyka: Droga Mleczna</p>
+            </div>
+            <div>
+                <h3>Hobby</h3>
+                <p>Naprawa statków latających</p>
+            </div>
+            <div>
+                <h3>Technology stack</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat error qui sit maiores, quaerat consequuntur eum, pariatur ut voluptas nulla esse ducimus accusamus dignissimos velit voluptatem asperiores amet facilis voluptate?</p>
+            </div>
+        </section>
     </main>
 
     <footer>
