--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="background-blue">
         Copyright &copy; 2019 Koleś Git
     </footer>
 
