--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="description">
             <div>
                 <h3>Bio</h3>
-                <p>Urodzony na Ziemi - Układ gwiezdny: układ słoneczny - galaktyka: Droga Mleczna</p>
+                <p>Urodzony na Ziemi w Układzie Słonecznym - galaktyka: Droga Mleczna</p>
             </div>
             <div>
                 <h3>Hobby</h3>
@@ -50,5 +50,6 @@
     </footer>
 
     <script src="index.js"></script>
+    <script src="playground.js"></script>
 </body>
 </html>
