--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     </header>
     <main>
         <div class="widgets">
-            <div class="weather"></div>
+            <div class="weather">
+                <div class="loader"></div>
+            </div>
         </div>
         <h1>Koleś Git</h1>
         <h2>portfolio</h2>
@@ -50,6 +52,5 @@
     </footer>
 
     <script src="index.js"></script>
-    <script src="playground.js"></script>
 </body>
 </html>
